--- a/stepwise.ipynb
+++ b/stepwise.ipynb
@@ -90,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y= train.loc[:,'oiadp']"
@@ -98,8 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=train.loc[:,train.columns!='oiadp']"
@@ -108,17 +112,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_boston\n",
+    "from sklearn import linear_model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import statsmodels.api as sm"
@@ -128,27 +136,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add  txs                            with p-value 0.0\n",
-      "Add  nopi                           with p-value 0.0\n",
-      "Add  txndba                         with p-value 0.0\n",
-      "Add  ceq                            with p-value 0.0\n",
-      "Add  txdc                           with p-value 0.0\n",
-      "Add  ibadj                          with p-value 0.0\n",
-      "Add  ao                             with p-value 0.0\n",
-      "Add  ivncf                          with p-value 0.0\n",
-      "Add  prstkc                         with p-value 0.0\n",
-      "Add  dd                             with p-value 0.0\n",
-      "Add  csho                           with p-value 0.0\n",
-      "Add  ebit                           with p-value 0.0\n",
-      "Drop prstkc                         with p-value 0.961321\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def stepwise_selection(X, y, \n",
     "                       initial_list=[], \n",
